changes to avoid map overflow

--- a/src/App.css
+++ b/src/App.css
@@ -146,7 +146,10 @@ height:100%;
   pointer-events: none !important;
 } */
 
-
+.MuiDialog-paperScrollPaper{
+  max-height:100% !important;
+ }
+ 
 @media only screen and (max-height: 680px) and (min-width: 480px){
   .MuiDialog-paperScrollPaper{
     max-height: calc(100% - 48px) !important;
@@ -258,6 +261,7 @@ and (min-device-width: 1024px)
   and (-webkit-min-device-pixel-ratio: 1.5) {
 
 }
+
 
 /* ******************************* HeatTable css ******************************* */
 
