--- a/src/Components/ProfileDialog/SideBar/SideBar.css
+++ b/src/Components/ProfileDialog/SideBar/SideBar.css
@@ -165,3 +165,17 @@ text-transform:capitalize;
 	width:80%;
 }
 
+.MuiExpansionPanelSummary-root{
+    padding:0px !important;
+}
+.MuiExpansionPanel-root{
+    box-shadow:0px 0px 0px !important;
+}
+.MuiExpansionPanelSummary-content p{
+    font-size:14px !important;
+    color:#706E6B !important
+}
+.MuiExpansionPanelDetails-root{
+    padding-left:0px !important;
+    padding-top:0px !important;
+}
